Attempt to fix spacing again...

--- a/style.css
+++ b/style.css
@@ -371,6 +371,8 @@ h2{
 		margin: auto;
 		overflow: hidden;
 		white-space: nowrap;
+		margin-bottom: 0;
+		padding-bottom: 0;
 	}
 
 		.options button{
@@ -389,13 +391,13 @@ h2{
 		}
 		
 		.uf{
-			width: 34%;
+			width: 33%;
 			position: relative;
 			margin: auto;
 		}
 		
 		.ufb{
-			width: 33%;
+			width: 34%;
 			position: absolute;
 			right: 0;
 			padding-right: 10px;
@@ -409,6 +411,7 @@ h2{
 		width: 100%;
 		background-color: rgba(250, 250, 250, 0.8);
 		margin-top: 0;
+		padding-top: 0;
 	}
 
 		.left{
@@ -505,19 +508,27 @@ h2{
 					width: auto;
 					position: relative;
 					left: 0;
+					float: left;
 					display: inline-block;
 				}
 
 				.person a{
 					padding: 2px;
 					font-size: 1.5em;
+					float: right;
 					display: inline-block;
 				}
 }
 
 
 @media (max-width: 500px){
+	.input{
+		overflow: hidden;
+		white-space: nowrap;
+	}
+
 	input{
+		display: inline-block;
 		border-radius: 0;
 		width: 66%;
 		padding: 0;
@@ -532,6 +543,7 @@ h2{
 	}
 
 	.search{
+		display: inline-block;
 		margin-left: 0;
 		border-radius: 0;
 		width: 34%;
